! imdb::is_serial() invalidated by site changes
! imdb::movieconnection() was broken due to site changes
! imdb_person::born() and imdb_person::died() suddenly missed day and month (site change; thanks to GeorgeFive for the fix!)
* test suite needed a minor update: our example "uncompleted" movie was completed meanwhile, so the test erraneously reported failure

v2.1.3 (15.04.2012)
-------------------
! some redirects have not been handled correctly (i.e. when IMDBID xxxxxxx was re-routed to yyyyyyy)
! imdb::is_serial() and imdb::get_episode_details() were broken due to site changes
! imdb::episodes() was broken due to site changes. ATTENTION: with this rewrite of the method,
  the outer array no longer starts at 0 but reflects the real season number (as often requested)!
+ imdb::get_episode_details() - added "airdate" as requested by ticket:290
! imdb::goofs() and imdb::crazy_credits() where broken due to site changes
* some adjustments to imdb::trivia - spoilers are now avoided by default. Pass TRUE as only argument to retrieve them separately.
+ some enhancements to genre retrieval (thanks to George!) - now there will be more genres reported :)

v2.1.2 (19.01.2012)
-------------------
! site changes broke the imdb class methods keywords(), seasons(), languages(), mpaa_reason(), goofs()
! site changes confused imdb::extReviews(), imdb::videosites()
! company info URLs were just the IMDB relative URL w/o protocol and site. Added the missing info
! if production spanned multiple years (xxxx-yyyy), movie type was setup wrongly ("type xxxx-")
+ added method imdb::endyear() for cases where production spanned multiple years. So for
  "xxxx-yyyy" this returns "yyyy", while imdb::year() is adjusted to "xxxx". Otherwise, both
  return the same year.
! imdb_topcharts::getChartsBoxOffice() was broken. Fixed thanx to hints from razor.
! imdb::episodes() was completely broken, as the entire page design and structure changed (multiple pages now)